// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with errors 1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <h1>
      Login
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        name="email"
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
      />
      <input
        name="password"
        onChange={[Function]}
        placeholder="password"
        required={true}
        type="password"
      />
      <button
        className="button button-hover"
        type="submit"
        value="Submit"
      >
        Submit
      </button>
      <p>
        Invalid credentials
      </p>
    </form>
  </div>
</div>
`;

exports[`matches snapshot with no errors 1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <h1>
      Login
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        name="email"
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
      />
      <input
        name="password"
        onChange={[Function]}
        placeholder="password"
        required={true}
        type="password"
      />
      <button
        className="button button-hover"
        type="submit"
        value="Submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
